--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
-    "next": "^15.0.3"
+    "next": "^15.0.3",
+    "next-cloudinary": "^6.16.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
